--- a/iOS/DoraemonKitDemo/DoraemonKitDemo/zh-Hans.lproj/DoraemonKitDemo.strings
+++ b/iOS/DoraemonKitDemo/DoraemonKitDemo/zh-Hans.lproj/DoraemonKitDemo.strings
@@ -72,4 +72,5 @@
     //Other
     "block方式加入插件"                       = "block方式加入插件";
     "测试插件"                                     = "测试插件";
+    "zombie test"                           = "zombie test";
 }
